--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,8 @@ section {
 .wrapper {
   height: 100vh;
   overflow: hidden;
-  background: radial-gradient(ellipse at left, #00303F -30%,#000 100%);
+  /* background: radial-gradient(ellipse at left, #00303F -30%,#000 100%); */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3));
 }
 
 #title {
