--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,11 @@ section {
   height: 100vh;
   overflow: hidden;
   /* background: radial-gradient(ellipse at left, #00303F -30%,#000 100%); */
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3));
+  /* background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)); */
+}
+
+.bg-black-transparent {
+  /* background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)); */
 }
 
 #title {
