--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -639,3 +639,16 @@ section {
       transform: translateX(-2000px);
   }
 }
+
+.containerTop {
+  width: 100%;
+  height: 300px;
+  -webkit-clip-path: polygon(50% 0%, 0% 0%, 0% 100%, 50% 100%, 100% 50%);
+  clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
+  outline: 2px solid #D9D9D9;
+}
+
+.mask-img-gradient {
+  mask-image: linear-gradient(#000 75%, transparent 95%);
+  -webkit-mask-image: linear-gradient(#000 75%, transparent 95%);
+}
