--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -643,14 +643,20 @@ section {
 .containerTop {
   width: 100%;
   height: 300px;
-  -webkit-clip-path: polygon(50% 0%, 0% 0%, 0% 100%, 50% 100%, 100% 50%);
+  -webkit-clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
   clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
   outline: 2px solid #D9D9D9;
+  transition: all 0.5s;
 }
 
 .mask-img-gradient {
   mask-image: linear-gradient(#000 75%, transparent 95%);
   -webkit-mask-image: linear-gradient(#000 75%, transparent 95%);
+}
+
+.mask-img-gradient-r {
+  mask-image: linear-gradient(to right, #000 75%, transparent 95%);
+  -webkit-mask-image: linear-gradient(to right, #000 75%, transparent 95%);
 }
 
 .swiperTop .swiper-wrapper .swiper-slide{
@@ -659,4 +665,9 @@ section {
 
 .swiperTop .swiper-wrapper .swiper-slide-active{
   width: 45% !important;
+
+  .containerTop{
+    -webkit-clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
+    clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
+  }
 }
