--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,7 @@ body {
 
 section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .wrapper {
@@ -642,11 +642,30 @@ section {
 
 .containerTop {
   width: 100%;
-  height: 300px;
-  -webkit-clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
-  clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
+  height: 500px;
+  background: #000;
+  -webkit-clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
+  clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
   outline: 2px solid #D9D9D9;
   transition: all 0.5s;
+
+  @media (min-width: 768px) {
+    height: 400px;
+    -webkit-clip-path: polygon(87% 0%, 0% 0%, 0% 100%, 87% 100%, 100% 50%);
+    clip-path: polygon(87% 0%, 0% 0%, 0% 100%, 87% 100%, 100% 50%);
+  }
+
+  @media (min-width: 1024px) {
+    height: 350px;
+    -webkit-clip-path: polygon(83% 0%, 0% 0%, 0% 100%, 83% 100%, 100% 50%);
+    clip-path: polygon(83% 0%, 0% 0%, 0% 100%, 83% 100%, 100% 50%);
+  }
+
+  @media (min-width: 1280px) {
+    height: 300px;
+    -webkit-clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
+    clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
+  }
 }
 
 .mask-img-gradient {
@@ -664,10 +683,22 @@ section {
 }
 
 .swiperTop .swiper-wrapper .swiper-slide-active{
-  width: 45% !important;
+  width: 100% !important;
 
   .containerTop{
     -webkit-clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
     clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
+  }
+
+  @media (min-width: 768px) {
+    width: 65% !important;
+  }
+
+  @media (min-width: 1024px) {
+    width: 55% !important;
+  }
+
+  @media (min-width: 1280px) {
+    width: 45% !important;
   }
 }
