--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -673,9 +673,9 @@ section {
   -webkit-mask-image: linear-gradient(#000 75%, transparent 95%);
 }
 
-.mask-img-gradient-r {
-  mask-image: linear-gradient(to right, #000 75%, transparent 95%);
-  -webkit-mask-image: linear-gradient(to right, #000 75%, transparent 95%);
+.mask-img-gradient-min {
+  mask-image: linear-gradient(#000 95%, transparent 100%);
+  -webkit-mask-image: linear-gradient(#000 95%, transparent 100%);
 }
 
 .swiperTop .swiper-wrapper .swiper-slide{
