Efecto parallax en guia

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -702,3 +702,14 @@ section {
     width: 45% !important;
   }
 }
+
+.parallax-mouse{
+  width: 100%;
+  height: 100vh;
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+.parallax-mouse div .parallax-element{
+  position: absolute;
+}
