--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -706,10 +706,18 @@ section {
 .parallax-mouse{
   width: 100%;
   height: 100vh;
-  display: block;
+  display: flex;
   position: relative;
   overflow: hidden;
+
+  @media (min-width: 768px) {
+    display: block;
+  }
 }
 .parallax-mouse div .parallax-element{
-  position: absolute;
+  position: relative;
+
+  @media (min-width: 768px) {
+    position: absolute;
+  }
 }
