--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -739,3 +739,7 @@ section {
   position: absolute;
   top: 0px;
 }
+
+.bg-gold {
+  background:linear-gradient(to right, #BF953F, #FCF6BA, #B38728, #FBF5B7, #AA771C);
+}
