--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -169,27 +169,27 @@ section {
   width: 100%;
   height: 500px;
   background: #000;
-  -webkit-clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
-  clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
+  -webkit-clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 90% 100%, 93% 90%, 99% 59%, 99% 56%, 80% 0%);
+  clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 90% 100%, 93% 90%, 99% 59%, 99% 56%, 80% 0%);
   outline: 2px solid #D9D9D9;
   transition: all 0.5s;
 
   @media (min-width: 768px) {
     height: 400px;
-    -webkit-clip-path: polygon(87% 0%, 0% 0%, 0% 100%, 87% 100%, 100% 50%);
-    clip-path: polygon(87% 0%, 0% 0%, 0% 100%, 87% 100%, 100% 50%);
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 75% 100%, 93% 70%, 99% 59%, 99% 56%, 75% 0%);
+    clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 75% 100%, 93% 70%, 99% 59%, 99% 56%, 75% 0%);
   }
 
   @media (min-width: 1024px) {
     height: 350px;
-    -webkit-clip-path: polygon(83% 0%, 0% 0%, 0% 100%, 83% 100%, 100% 50%);
-    clip-path: polygon(83% 0%, 0% 0%, 0% 100%, 83% 100%, 100% 50%);
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 75% 100%, 93% 70%, 99% 59%, 99% 56%, 75% 0%);
+    clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 75% 100%, 93% 70%, 99% 59%, 99% 56%, 75% 0%);
   }
 
   @media (min-width: 1280px) {
     height: 300px;
-    -webkit-clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
-    clip-path: polygon(80% 0%, 0% 0%, 0% 100%, 80% 100%, 100% 50%);
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 75% 100%, 93% 70%, 99% 59%, 99% 56%, 75% 0%);
+    clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 75% 100%, 93% 70%, 99% 59%, 99% 56%, 75% 0%);
   }
 }
 
@@ -216,8 +216,8 @@ section {
   width: 100% !important;
 
   .containerTop{
-    -webkit-clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
-    clip-path: polygon(90% 0%, 0% 0%, 0% 100%, 90% 100%, 100% 50%);
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 90% 100%, 93% 90%, 99% 59%, 99% 56%, 90% 0%);
+    clip-path: polygon(0% 0%, 0% 100%, 0% 100%, 90% 100%, 93% 90%, 99% 59%, 99% 56%, 90% 0%);
   }
 
   @media (min-width: 768px) {
